@@ -1,5 +1,5 @@
 /*
- * "$Id: lpd.c,v 1.28.2.5 2002/03/01 19:55:08 mike Exp $"
+ * "$Id: lpd.c,v 1.28.2.6 2002/03/25 17:14:13 mike Exp $"
  *
  *   Line Printer Daemon backend for the Common UNIX Printing System (CUPS).
  *
@@ -450,7 +450,8 @@ lpd_queue(char *hostname,	/* I - Host to connect to */
       close(fd);
       fd = -1;
 
-      if (error == ECONNREFUSED)
+      if (error == ECONNREFUSED || error == EHOSTDOWN ||
+          error == EHOSTUNREACH)
       {
 	fprintf(stderr, "INFO: Network host \'%s\' is busy; will retry in 30 seconds...",
                 hostname);
@@ -758,5 +759,5 @@ rresvport(int *port)		/* IO - Port number to bind to */
 #endif /* !HAVE_RRESVPORT */
 
 /*
- * End of "$Id: lpd.c,v 1.28.2.5 2002/03/01 19:55:08 mike Exp $".
+ * End of "$Id: lpd.c,v 1.28.2.6 2002/03/25 17:14:13 mike Exp $".
  */
