@@ -1,5 +1,5 @@
 /*
- * "$Id: usb.c,v 1.18.2.8 2002/03/19 19:08:52 mike Exp $"
+ * "$Id: usb.c,v 1.18.2.9 2002/03/25 17:14:14 mike Exp $"
  *
  *   USB port backend for the Common UNIX Printing System (CUPS).
  *
@@ -165,6 +165,11 @@ main(int  argc,		/* I - Number of command-line arguments (6 or 7) */
       if (errno == EBUSY)
       {
         fputs("INFO: USB port busy; will retry in 30 seconds...\n", stderr);
+	sleep(30);
+      }
+      else if (errno == ENXIO || errno == EIO)
+      {
+        fputs("INFO: Printer not connected; will retry in 30 seconds...\n", stderr);
 	sleep(30);
       }
       else
@@ -451,5 +456,5 @@ list_devices(void)
 
 
 /*
- * End of "$Id: usb.c,v 1.18.2.8 2002/03/19 19:08:52 mike Exp $".
+ * End of "$Id: usb.c,v 1.18.2.9 2002/03/25 17:14:14 mike Exp $".
  */
